[project]
name = "maths"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "greenlet>=3.3.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyodbc>=5.3.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
]
